# fozzie

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml  test.yml  tests.yml
benches/: choices.rs  drawing.rs  matcher.rs  matching.rs  scoring.rs
src/: bonus.rs  choice.rs  choices.rs  color.rs  config.rs  cursor.rs  lib.rs  main.rs  matcher.rs  matrix.rs  scorer.rs  search.rs  settings.rs  terminal.rs  writer.rs
