[package]
name = "fozzie"
version = "1.3.2"
authors = ["Nick Pezza <npezza93@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "A quick fuzzy finder for the terminal"
repository = "https://github.com/npezza93/fozzie"

[[bin]]
name = "fozzie"
path = "src/main.rs"

[dependencies]
"clap"="^2.31.2"
"float-cmp"="^0.8.0"
"termion"="^1.5.4"
"raw_tty"="^0.1.0"
"regex"="^1.3.4"
term_size = "^1.0.0-beta.2"
rayon = "^1.1"

[build-dependencies]
"regex"="^1.3.4"
"clap"="^2.31.2"
term_size = "^1.0.0-beta.2"
